Fixing the skill chart to remove clipped text. Fixed scrolling isues in FireFox.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -339,9 +339,10 @@ nav {
 }
 
 #skill-chart {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
+  width: 75% !important;
+  max-width: 75% !important;
+  height: 75% !important;
+  max-height: 75% !important;
 }
 
 // Alignment stuff.
